# timesignal

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASES.md  dist-workspace.toml  justfile
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
crates/signals/: Cargo.toml
crates/signals/assets/: checksum_poly_calc.py  dcf77_chip_sequence_gen.py  dut1.py
crates/signals/src/: common.rs  dcf77.rs  jjy.rs  junghans.rs  lib.rs  msf.rs  sin.rs  wwvb.rs
crates/sntp/: Cargo.toml
crates/sntp/src/: lib.rs
crates/time/: Cargo.toml
crates/time/src/: lib.rs  parse.rs  time.rs
crates/time/src/tz/: mod.rs  tzfile.rs  tzstring.rs
lib/web/: Cargo.toml
lib/web/html-js/: index.html  worklet-processor.js
lib/web/src/: alloc.rs  lib.rs
src/: args.rs  dcf77.rs  error.rs  junghans.rs  main.rs  sntp.rs  time.rs  tz.rs  wwvb.rs
