[package]
name = "timesignal"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jensyt/timesignal"

[workspace]

[dependencies]
cpal = "0.15.3"
time = { path = "crates/time", features = ["std"] }

[profile.dev]
debug = 0

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
