[package]
name = "timesignal"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/jensyt/timesignal"

[workspace]
members = ["./", "crates/*", "lib/*"]
default-members = ["./", "crates/*"]

[dependencies]
cpal = "0.15.3"
time = { path = "crates/time", features = ["std", "now"] }
sntp = { path = "crates/sntp" }
signals = { path = "crates/signals", features = ["std"] }

[profile.dev]
debug = 0

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
